<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.showcurrencyapplication.activity.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.MainActivity">

        <TextView
            android:id="@+id/txt_main_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="환율 계산"
            android:textColor="@color/black"
            android:textSize="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_main_label_send_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:text="송금국가 : "
            android:textSize="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_main_title" />

        <TextView
            android:id="@+id/txt_main_send_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@{viewModel.sendState.nation}"
            android:textSize="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/txt_main_label_send_state"
            app:layout_constraintStart_toEndOf="@+id/txt_main_label_send_state"
            app:layout_constraintTop_toBottomOf="@+id/txt_main_title" />

        <TextView
            android:id="@+id/txt_main_send_currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@{'('+viewModel.sendState.currency+')'}"
            android:textSize="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/txt_main_label_send_state"
            app:layout_constraintStart_toEndOf="@+id/txt_main_send_state"
            app:layout_constraintTop_toBottomOf="@+id/txt_main_title" />

        <TextView
            android:id="@+id/txt_main_label_receive_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="수취국가 : "
            android:textSize="16dp"
            app:layout_constraintStart_toStartOf="@+id/txt_main_label_send_state"
            app:layout_constraintTop_toBottomOf="@+id/txt_main_label_send_state" />

        <TextView
            android:id="@+id/txt_main_label_exchange_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="환율 : "
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="@+id/txt_main_label_receive_state"
            app:layout_constraintTop_toBottomOf="@+id/txt_main_label_receive_state" />

        <TextView
            android:id="@+id/txt_main_exchange_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:tag="@{viewModel.currentRate}"
            android:text="@{String.format(@string/all_amount_format,viewModel.currentRate)}"
            android:textSize="16dp"
            app:layout_constraintStart_toEndOf="@+id/txt_main_label_exchange_rate"
            app:layout_constraintTop_toBottomOf="@+id/txt_main_label_receive_state" />

        <TextView
            android:id="@+id/txt_main_ex_rate_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="@{viewModel.receiveState.currency}"
            android:text="@{' '+viewModel.receiveState.currency+' '}"
            android:textSize="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/txt_main_label_exchange_rate"
            app:layout_constraintStart_toEndOf="@+id/txt_main_exchange_rate"
            app:layout_constraintTop_toTopOf="@+id/txt_main_label_exchange_rate" />

        <TextView
            android:id="@+id/txt_main_ex_rate_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="@{viewModel.sendState.currency}"
            android:text='@{"/ "+viewModel.sendState.currency+" "}'
            android:textSize="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/txt_main_label_exchange_rate"
            app:layout_constraintStart_toEndOf="@+id/txt_main_ex_rate_to"
            app:layout_constraintTop_toTopOf="@+id/txt_main_label_exchange_rate" />

        <TextView
            android:id="@+id/txt_main_label_requested_at"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="조회시간 : "
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="@+id/txt_main_label_receive_state"
            app:layout_constraintTop_toBottomOf="@+id/txt_main_label_exchange_rate" />

        <TextView
            android:id="@+id/txt_main_requested_at"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@{viewModel.requested_at}"
            android:textSize="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/txt_main_label_requested_at"
            app:layout_constraintStart_toEndOf="@+id/txt_main_label_requested_at"
            app:layout_constraintTop_toBottomOf="@+id/txt_main_label_exchange_rate" />

        <TextView
            android:id="@+id/txt_main_label_money_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="송금액 : "
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="@+id/txt_main_label_receive_state"
            app:layout_constraintTop_toBottomOf="@+id/txt_main_label_requested_at" />

        <TextView
            android:id="@+id/txt_main_money_currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:tag="@{viewModel.sendState.currency}"
            android:text="@{' '+viewModel.sendState.currency}"
            android:textSize="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/edt_main_money_amount"
            app:layout_constraintStart_toEndOf="@+id/edt_main_money_amount"
            app:layout_constraintTop_toBottomOf="@+id/txt_main_label_requested_at" />

        <EditText
            android:id="@+id/edt_main_money_amount"
            bindRealtimeMoney="@{true}"
            bindViewModel="@{viewModel}"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@android:color/transparent"
            android:ems="5"
            android:gravity="end"
            android:inputType="numberDecimal"
            android:maxLength="5"
            android:singleLine="true"
            android:text="0"
            android:textSize="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/txt_main_label_money_amount"
            app:layout_constraintStart_toEndOf="@+id/txt_main_label_money_amount"
            app:layout_constraintTop_toTopOf="@+id/txt_main_label_money_amount" />

        <TextView
            android:id="@+id/txt_main_exchanged_money"
            android:text="@{viewModel.exchangedMoney}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_main_money_amount" />

        <Spinner
            android:id="@+id/spinner_main_currencies"
            bindViewModel="@{viewModel}"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="@+id/txt_main_label_receive_state"
            app:layout_constraintStart_toEndOf="@+id/txt_main_label_receive_state"
            app:layout_constraintTop_toTopOf="@+id/txt_main_label_receive_state" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
